Remove group controls location and filter
