# src/routers/v2/Groups/GetGroupRouter.js
@@ -22,10 +22,7 @@ class GetGroupRouter extends AppDevRouter<APIGroup> {
     return {
       id: group.id,
       code: group.code,
-      isFilterActivated: group.isFilterActivated,
       isLive: await req.app.groupManager.isLive(group.code),
-      isLocationRestricted: group.isLocationRestricted,
-      location: group.location,
       name: group.name,
       updatedAt: await GroupsRepo.latestActivityByGroupID(group.id),
     };
