# src/routers/v2/swagger.json
@@ -400,21 +400,6 @@
                 },
                 "code": {
                   "type": "string"
-                },
-                "location": {
-                  "type": "object",
-                  "properties": {
-                    "lat": {
-                      "type": "number",
-                      "format": "float",
-                      "nullable": true
-                    },
-                    "long": {
-                      "type": "number",
-                      "format": "float",
-                      "nullable": true
-                    }
-                  }
                 }
               }
             }
@@ -1228,21 +1213,6 @@
                 "code": {
                   "type": "string",
                   "description": "Group code"
-                },
-                "location": {
-                  "type": "object",
-                  "properties": {
-                    "lat": {
-                      "type": "number",
-                      "format": "float",
-                      "nullable": true
-                    },
-                    "long": {
-                      "type": "number",
-                      "format": "float",
-                      "nullable": true
-                    }
-                  }
                 }
               },
               "required": [
@@ -1297,21 +1267,6 @@
                 "code": {
                   "type": "string",
                   "description": "Group code"
-                },
-                "location": {
-                  "type": "object",
-                  "properties": {
-                    "lat": {
-                      "type": "number",
-                      "format": "float",
-                      "nullable": true
-                    },
-                    "long": {
-                      "type": "number",
-                      "format": "float",
-                      "nullable": true
-                    }
-                  }
                 }
               }
             }
@@ -1461,22 +1416,6 @@
             "name": "currentPoll",
             "schema": {
               "$ref": "#/definitions/Socket - ClientPoll"
-            }
-          }
-        ]
-      }
-    },
-    "user/poll/fr/filter": {
-      "get": {
-        "tags": [
-          "Socket: to member"
-        ],
-        "summary": "User receives when FR answer is registered, if doesn’t pass profanity filter then sends user answer and array of bad words found",
-        "responses": [
-          {
-            "name": "response",
-            "schema": {
-              "$ref": "#/definitions/Socket - PollFilter"
             }
           }
         ]
@@ -1644,7 +1583,6 @@
     },
     "Group": {
       "type": "object",
-      "description": "By default, `isFilterActivated = true` `isLocationRestricted = false`",
       "properties": {
         "id": {
           "type": "integer"
@@ -1652,30 +1590,8 @@
         "code": {
           "type": "string"
         },
-        "isFilterActivated": {
-          "description": "Indicate if profanity filter is on",
-          "type": "boolean"
-        },
         "isLive": {
           "type": "boolean"
-        },
-        "isLocationRestricted": {
-          "type": "boolean"
-        },
-        "location": {
-          "type": "object",
-          "properties": {
-            "lat": {
-              "type": "number",
-              "format": "float",
-              "nullable": true
-            },
-            "long": {
-              "type": "number",
-              "format": "float",
-              "nullable": true
-            }
-          }
         },
         "name": {
           "type": "string"
@@ -1689,10 +1605,7 @@
       "required": [
         "id",
         "code",
-        "isFilterActivated",
         "isLive",
-        "isLocationRestricted",
-        "location",
         "name",
         "updatedAt"
       ]
@@ -1918,29 +1831,6 @@
         "text",
         "type",
         "userAnswers"
-      ]
-    },
-    "Socket - PollFilter": {
-      "type": "object",
-      "description": "NOTE: `text` and `filter` fields passed in when `success=false`",
-      "properties": {
-        "success": {
-          "type": "boolean"
-        },
-        "text": {
-          "description": "Text of answer submitted",
-          "type": "string"
-        },
-        "filter": {
-          "description": "Words that are considered inappropriate",
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      },
-      "required": [
-        "success"
       ]
     },
     "User": {
